--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "es6-promise": "^4.2.5",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^14.0.2",
-    "mongoose": "^5.2.15"
+    "isomorphic-fetch": "^2.2.1",
+    "mongodb-stitch-browser-sdk": "^4.0.13",
+    "mongoose": "^5.2.15",
+    "node-fetch": "^2.2.0"
   }
 }
